unpackaged/main/default/objects/API_Offer_Matrix__c/API_Offer_Matrix__c.object-meta.xml
<CustomObject>
    <label>API Offer Matrix</label>
    <nameField>
        <label>LendVantage Offer Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Offer Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>