unpackaged/main/default/objects/API_Offer_Matrix__c/fields/Lender_SIC_2__c.field-meta.xml
<CustomField>
    <fullName>Lender_SIC_2__c</fullName>
    <label>Lender SIC 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>