unpackaged/main/default/objects/API_Offer_Matrix__c/fields/Loan_Amount_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Calculation__c</fullName>
    <label>Loan Amount Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage of Annual Revenue</fullName>
            </value>
            <value>
                <fullName>Bank Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>