unpackaged/main/default/objects/API_Offer_Matrix__c/fields/Max_FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_FICO_Score__c</fullName>
    <label>Max FICO Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>