unpackaged/main/default/objects/API_Offer_Matrix__c/fields/Max_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_Amount__c</fullName>
    <label>Max Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>