unpackaged/main/default/objects/API_Offer_Matrix__c/fields/Max_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Max_Term_in_Months__c</fullName>
    <label>Max Term in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>