unpackaged/main/default/objects/API_Offer_Matrix__c/fields/Min_Average_Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Min_Average_Bank_Balance__c</fullName>
    <label>Min Average Bank Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>