unpackaged/main/default/objects/API_Offer_Matrix__c/fields/Percent_of_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Annual_Revenue__c</fullName>
    <label>Percent of Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>